--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,17 +6,13 @@
         <div>
             <h1><a href="/">Mi BRAND NEW Django Girls Blog</a></h1>
         </div>
-
-        <div>
-            <p>published: 14.06.2019, 12:14</p>
-            <h2><a href="">Primer post</a></h2>
-            <p>Este es un post que se supone que hice el 14.06.2019.</p>
-        </div>
-
-        <div>
-            <p>published: 15.06.2019, 12:14</p>
-            <h2><a href="">Segundo post</a></h2>
-            <p>Y este al dia siguiente.</p>
-        </div>
+        
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
